VA-454 fix view of finish button, wrap dot navigation, adjust intro, background to cover

--- a/css/questionset.css
+++ b/css/questionset.css
@@ -40,7 +40,8 @@
   border-radius: var(--h5p-theme-border-radius-medium);
   margin: 0;
   background-color: var(--h5p-theme-ui-base);
-  display: inline-flex;
+  display: flex;
+  flex-flow: row wrap;
 }
 .progress-item {
   list-style: none;
@@ -102,10 +103,18 @@
   padding: var(--h5p-theme-spacing-l);
   align-items: center;
   background-color: var(--h5p-theme-ui-base);
-     @media (max-width: 576px) {
-       flex-wrap: wrap;
+  @media (max-width: 576px) {
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
   }
 }
+
+.intro-page.without-image {
+  justify-content: center;
+  text-align: center;
+}
+
 .introText-container{
   order: 2;
   display: flex;
@@ -301,7 +310,6 @@
   display: none;
 }
 
-/* TODO: I added this to remove extra container but it might not be the best way to do this! Vilde should look into this */
 .qs-footer .h5p-theme-primary-cta.h5p-theme-show-results.h5p-hidden{
   display: none;
 }
